--- a/main website/index.html
+++ b/main website/index.html
@@ -15,10 +15,50 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#experience">Experience</a></li>
                     <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contacs">Contact</a></li>
+                    <li><a href="#contacts">Contact</a></li>
                 </ul>
             </div>
         </nav> 
+        <nav id="hamburger-nav">
+            <div class="logo">Nakul K S</div>
+            <div class="hamburger-menu">
+                <div class="hamburger-icon" onclick="ToggleMenu()">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </div>
+                <div class="menu-links">
+                    <li><a href="#about" onclick="ToggleMenu()">About</a></li>
+                    <li><a href="#experience" onclick="ToggleMenu()">Experience</a></li>
+                    <li><a href="#projects" onclick="ToggleMenu()">Projects</a></li>
+                    <li><a href="#contacts" onclick="ToggleMenu()">Contact</a></li>
+                </div>
+            </div>
+        </nav>
+        <section id="profile">
+            <div class="section__pic-container">
+                <img src="./assets/image.png" alt="">
+            </div>
+            <div class="section__text">
+                <p class="section__text__p1">Hello I'm</p>
+                <h1 class="title">Nakul K S</h1>
+                <p class="section__text__p2">First year student</p>
+                <div class="btn-container">
+                    <button class="btn btn-color-2" 
+                            onclick="window.open('./assets/resume-example.pdf')">Download CV
+                    </button>
+                    <button class="btn btn-color-1" 
+                            onclick="location.href='./#contacts'">Download CV
+                    </button>
+                </div>
+                <div id="socials-container">
+                    <img src="./assets/linkedin.png" alt="My Linkedin Profile" class="icon" 
+                    onclick="window.open('https://www.linkedin.com/in/nakul-k-s-34b3431b4/')">
+                    <img src="./assets/github.png" alt="My Github Profile" class="icon" 
+                    onclick="window.open('https://github.com/Space3108')">
+                </div>
+            </div>
+        </section>
         <script src="script.js"></script>    
     </body>
 </html> 
