finished portfolio website

--- a/main website/index.html
+++ b/main website/index.html
@@ -48,7 +48,7 @@
                             onclick="window.open('./assets/resume-example.pdf')">Download CV
                     </button>
                     <button class="btn btn-color-1" 
-                            onclick="location.href='./#contacts'">Download CV
+                            onclick="location.href='./#contacts'">Contact Info
                     </button>
                 </div>
                 <div id="socials-container">
@@ -59,6 +59,192 @@
                 </div>
             </div>
         </section>
+        <section id="about">
+            <p class="section__text__p1">Get To Know More</p>
+            <h1 class="title">About Me</h1>
+            <div class="section-container">
+                <div class="section__pic-container">
+                    <img src="./assets/my face-Enhanced.jpg" alt="Profile picture" class="about-pic"/>
+                </div> 
+                <div class="about-details-container">
+                    <div class="about-containers">
+                        <div class="details-container">
+                            <img src="./assets/experience.png" alt="experience icon" class="icon">
+                            <h3>Skills</h3>
+                            <p>Video Editing <br>Coding</p>
+                        </div>
+                        <div class="details-container">
+                            <img src="./assets/education.png" alt="education icon" class="icon">
+                            <h3>Education</h3>
+                            <p>B.tech computer science and engineering <br>Vit vellore</p>
+                        </div>
+                    </div>
+                    <div class="text-container">
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                            Suscipit illo quo blanditiis modi dolorem odio itaque harum 
+                            debitis mollitia! Blanditiis, iusto nostrum sit quos 
+                            perspiciatis provident, doloremque, aliquid placeat 
+                            distinctio architecto facilis. Suscipit, dolorem voluptatem 
+                            porro impedit doloribus, error ratione odit iure ipsam numquam
+                             animi, sapiente nulla blanditiis omnis dicta.
+                        </p>
+                    </div>
+                </div>               
+            </div>
+            <img src="./assets/arrow.png" alt="arrow icon" 
+                class="icon arrow" onclick="location.href='./#experience'">            
+        </section>
+        <section id="experience">
+            <p class="section__text__p1">Explore My</p>
+            <h1 class="title">Experience</h1>
+            <div class="experience-detials-container">
+                <div class="about-containers">
+                    <div class="details-container">
+                        <h2 class="experience-sub-title">Photo/Video editing</h2>
+                        <div class="article-container">
+                            <article>
+                                <img src="./assets/checkmark.png" alt="checkmark" class="icon">
+                                <div class="nakul">
+                                    <h3>Sony Vegas Pro</h3>
+                                    <p>Intermediate</p>                                 
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="checkmark" class="icon">
+                                <div class="nakul">
+                                    <h3>Adobe Premiere Pro</h3>
+                                    <p>Intermediate</p>                                 
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="checkmark" class="icon">
+                                <div class="nakul">
+                                    <h3>Adobe Photoshop</h3>
+                                    <p>Intermediate</p>                                 
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="checkmark" class="icon">
+                                <div class="nakul">
+                                    <h3>Canva</h3>
+                                    <p>Intermediate</p>                                 
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="details-container">
+                        <h2 class="experience-sub-title">Coding</h2>
+                        <div class="article-container">
+                            <article>
+                                <img src="./assets/checkmark.png" alt="checkmark" class="icon">
+                                <div class="nakul">
+                                    <h3>HTML</h3>
+                                    <p>Intermediate</p>                                 
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="checkmark" class="icon">
+                                <div class="nakul">
+                                    <h3>CSS</h3>
+                                    <p>Intermediate</p>                                 
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="checkmark" class="icon">
+                                <div class="nakul">
+                                    <h3>SQL</h3>
+                                    <p>Intermediate</p>                                 
+                                </div>
+                            </article>
+                            <article>
+                                <img src="./assets/checkmark.png" alt="checkmark" class="icon">
+                                <div class="nakul">
+                                    <h3>Python</h3>
+                                    <p>Intermediate</p>                                 
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <img src="./assets/arrow.png" alt="arrow icon" 
+                class="icon arrow" onclick="location.href='./#projects'"> 
+        </section>
+        <section id="projects">
+            <p class="section__text__p1">Browse My Recent</p>
+            <h1 class="title">Projects</h1>
+            <div class="experience-detials-container">
+                <div class="about-containers">
+                    <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/project-1.png" alt="project img" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project 1</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" 
+                        onclick="window.open('https://www.google.com')">Github</button>
+                        <button class="btn btn-color-2 project-btn" 
+                        onclick="window.open('https://www.google.com')">Live preview</button>
+                    </div>
+                    </div>
+                    <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/project-2.png" alt="project img" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project 2</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" 
+                        onclick="window.open('https://www.google.com')">Github</button>
+                        <button class="btn btn-color-2 project-btn" 
+                        onclick="window.open('https://www.google.com')">Live preview</button>
+                    </div>
+                    </div>
+                    <div class="details-container color-container">
+                    <div class="article-container">
+                        <img src="./assets/project-3.png" alt="project img" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project 3</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" 
+                        onclick="window.open('https://www.google.com')">Github</button>
+                        <button class="btn btn-color-2 project-btn" 
+                        onclick="window.open('https://www.google.com')">Live preview</button>
+                    </div>
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-color-1 extra" onclick="window.open('./projects.html')">More Projects</button>
+            <img src="./assets/arrow.png" alt="arrow icon" 
+                class="icon arrow" onclick="location.href='./#contacts'"> 
+        </section>
+        <section id="contacts">
+            <p class="section__text__p1">Get In Touch</p>
+            <h1 class="title">Contact Me</h1>
+            <div class="contact-info-upper-container">
+                <div class="contact-info-container">
+                    <img src="./assets/email.png" alt="email icon" class="icon contact-icon email">
+                    <p><a href="mailto:nakulks3108@gmail.com">nakulks3108@gmail.com</a></p>
+                </div>
+                <div class="contact-info-container">
+                    <img src="./assets/linkedin.png" alt="linkedin icon" class="icon contact-icon">
+                    <p><a href="https://www.linkedin.com/in/nakul-k-s-34b3431b4/">My Linkedin</a></p>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <nav>
+                <div class="nav-links-container">
+                    <ul class="nav-links">
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contacts">Contact</a></li>
+                    </ul>
+
+                </div>
+            </nav>
+            <p>Copyright &#169; 2024 Nakul K S. All Rights Reserved. </p>
+        </footer>
         <script src="script.js"></script>    
     </body>
 </html> 
