--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <p class="section__text__p2">First year student</p>
                 <div class="btn-container">
                     <button class="btn btn-color-2" 
-                            onclick="window.open('./assets/resume-example.pdf')">Download CV
+                            onclick="window.open('./assets/resume.pdf')">Download CV
                     </button>
                     <button class="btn btn-color-1" 
                             onclick="location.href='./#contacts'">Contact Info
@@ -80,13 +80,7 @@
                         </div>
                     </div>
                     <div class="text-container">
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                            Suscipit illo quo blanditiis modi dolorem odio itaque harum 
-                            debitis mollitia! Blanditiis, iusto nostrum sit quos 
-                            perspiciatis provident, doloremque, aliquid placeat 
-                            distinctio architecto facilis. Suscipit, dolorem voluptatem 
-                            porro impedit doloribus, error ratione odit iure ipsam numquam
-                             animi, sapiente nulla blanditiis omnis dicta.
+                        <p>As a motivated B.Tech CSE student with a strong passion for coding, I bring a solid foundation in computer science and a keen interest in software development. My skills extend beyond programming; I am proficient in Photoshop and video editing, demonstrating a well-rounded capability in both technical and creative fields. Known for my dedication and ability to meet deadlines, I am committed to delivering high-quality work and tackling challenges with a strong work ethic. My diverse skill set and determination make me a valuable asset to any team.
                         </p>
                     </div>
                 </div>               
