--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <img src="./assets/linkedin.png" alt="My Linkedin Profile" class="icon" 
                     onclick="window.open('https://www.linkedin.com/in/nakul-k-s-34b3431b4/')">
                     <img src="./assets/github.png" alt="My Github Profile" class="icon" 
-                    onclick="window.open('https://github.com/Space3108')">
+                    onclick="window.open('https://github.com/V0idSyntax')">
                 </div>
             </div>
         </section>
