--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <h2 class="experience-sub-title project-title">Project 1</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" 
-                        onclick="window.open('https://www.google.com')">Github</button>
+                        onclick="window.open('./assets/COMING SOON.jpg')">Github</button>
                     </div>
                     </div>
                     <div class="details-container color-container">
@@ -186,7 +186,7 @@
                     <h2 class="experience-sub-title project-title">Project 2</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" 
-                        onclick="window.open('https://www.google.com')">Github</button>
+                        onclick="window.open('./assets/COMING SOON.jpg')">Github</button>
                     </div>
                     </div>
                     <div class="details-container color-container">
@@ -196,7 +196,7 @@
                     <h2 class="experience-sub-title project-title">Project 3</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" 
-                        onclick="window.open('https://www.google.com')">Github</button>
+                        onclick="window.open('./assets/COMING SOON.jpg')">Github</button>
                     </div>
                     </div>
                 </div>
