--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                     <h2 class="experience-sub-title project-title">Project 1</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" 
-                        onclick="window.open('https://media-hosting.imagekit.io//8831605e948d45dd/COMING SOON.jpg?Expires=1834134829&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=quk2sIbOfvD~KVv24Vo1m1v2qVyzPVyasFTO86pzI2jLeirCNzvX6JtRAyITgOQOIlTnIeN1tsO37M1CJ1M83yYnDW~ncRJAG1dddy9ukh-CfXp61gBD37Yt5nUsa-qZklhkJ7zJVAvSbxBKMk~VJqMKu5NccolbKKK~VipDZ-VHX-wCEfAtOsYuD9NUwTojBXR2YGBrWG9zC7DCeh1M-LXDiPz~8fF7N94jaQ4iPOJC1dtemccaOZ3rXX0P55ApUh26dMBtI-Oi63ku8hFkTMaq6Socdk7Oq9zqEA-t578Hw-GFfkOrpmNOJ9YBzp0oFeKpe9vOMbWnFDDqpSwlyA__')">Github</button>
+                        onclick="window.open('./assets/coming.jpg')">Github</button>
                     </div>
                     </div>
                     <div class="details-container color-container">
@@ -186,7 +186,7 @@
                     <h2 class="experience-sub-title project-title">Project 2</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" 
-                        onclick="window.open('https://media-hosting.imagekit.io//8831605e948d45dd/COMING SOON.jpg?Expires=1834134829&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=quk2sIbOfvD~KVv24Vo1m1v2qVyzPVyasFTO86pzI2jLeirCNzvX6JtRAyITgOQOIlTnIeN1tsO37M1CJ1M83yYnDW~ncRJAG1dddy9ukh-CfXp61gBD37Yt5nUsa-qZklhkJ7zJVAvSbxBKMk~VJqMKu5NccolbKKK~VipDZ-VHX-wCEfAtOsYuD9NUwTojBXR2YGBrWG9zC7DCeh1M-LXDiPz~8fF7N94jaQ4iPOJC1dtemccaOZ3rXX0P55ApUh26dMBtI-Oi63ku8hFkTMaq6Socdk7Oq9zqEA-t578Hw-GFfkOrpmNOJ9YBzp0oFeKpe9vOMbWnFDDqpSwlyA__')">Github</button>
+                        onclick="window.open('./assets/coming.jpg')">Github</button>
                     </div>
                     </div>
                     <div class="details-container color-container">
@@ -196,7 +196,7 @@
                     <h2 class="experience-sub-title project-title">Project 3</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" 
-                        onclick="window.open('https://media-hosting.imagekit.io//8831605e948d45dd/COMING SOON.jpg?Expires=1834134829&Key-Pair-Id=K2ZIVPTIP2VGHC&Signature=quk2sIbOfvD~KVv24Vo1m1v2qVyzPVyasFTO86pzI2jLeirCNzvX6JtRAyITgOQOIlTnIeN1tsO37M1CJ1M83yYnDW~ncRJAG1dddy9ukh-CfXp61gBD37Yt5nUsa-qZklhkJ7zJVAvSbxBKMk~VJqMKu5NccolbKKK~VipDZ-VHX-wCEfAtOsYuD9NUwTojBXR2YGBrWG9zC7DCeh1M-LXDiPz~8fF7N94jaQ4iPOJC1dtemccaOZ3rXX0P55ApUh26dMBtI-Oi63ku8hFkTMaq6Socdk7Oq9zqEA-t578Hw-GFfkOrpmNOJ9YBzp0oFeKpe9vOMbWnFDDqpSwlyA__')">Github</button>
+                        onclick="window.open('./assets/coming.jpg')">Github</button>
                     </div>
                     </div>
                 </div>
